# rbgk

./: .gitignore  .gitmodules  Cargo.toml  rename_project
src/: di.rs  di_container.rs  error.rs  game.rs  greeter.rs  hello_world_greeter.rs  lib.rs  main.rs  unit_tests.rs  universal_width_provider.rs  width_provider.rs
src/app/: main.rs
src/arch/: mod.rs  unit_tests.rs
src/consts/: en_us.rs
src/di/: container.rs  greeter_container.rs  mod.rs
src/di_containers/: greeter_container.rs  mod.rs
src/game/: mod.rs
src/game/unit_tests/: mod.rs  score.rs
src/greeter/: hello_world_greeter.rs  mod.rs  width_provider.rs
src/lib/: args.rs  consts.rs  error.rs  quickstart_template.rs  validate.rs
src/lib/arch/: mod.rs
src/lib/arch/unit_tests/: mod.rs
src/lib/concurrency_primitives/: mod.rs
src/lib/concurrency_primitives/unit_tests/: mod.rs
src/lib/consts/: en_us.rs
src/lib/unit_tests/: mod.rs
src/rolls/: mod.rs  validators.rs
src/rolls/unit_tests/: mod.rs  new.rs  validate.rs
src/unit_tests/: mock_greeter.rs  mod.rs  test_greeter_container.rs
src/unit_tests/SomeType/: SomeMethod.rs  mod.rs
src/unit_tests/containers/: mod.rs  test_greeter_container.rs  test_width_provider_container.rs
src/unit_tests/di_containers/: test_greeter_container.rs
src/unit_tests/frame/: mod.rs  new.rs
src/unit_tests/game/: mod.rs  score.rs
src/unit_tests/mocks/: mock_greeter.rs  mock_width_provider.rs  mod.rs
src/unit_tests/test_containers/: test_greeter_container.rs  test_width_provider_container.rs
src/width_provider/: bit_width_provider.rs  mod.rs
