[package]
authors = ["Brad Gibson"]
name = "quickstart_template"
version = "0.1.0"

[[bin]]
doc = false
name = "quickstart_template"
path = "src/bin/main.rs"
test = false

[dependencies.polish]
git = "https://github.com/alkass/polish"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.failure]
version = "0.*"

[dependencies.libc]
version = "~0"

[dev-dependencies.pretty_assertions]
version = "*"

[features]
default = ["clippy"]

[lib]
name = "quickstart_template"
path = "src/lib.rs"

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.doc]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[workspace]
