[package]
authors = ["bRad <brad@humanenginuity.com>"]
name = "qst"
version = "0.1.0"

[lib]
name = "qst"
path = "src/lib.rs"

[[bin]]
doc = false
name = "qst"
path = "src/main.rs"
test = false

[dependencies]
failure = "*"

[dependencies.clippy]
optional = true
version = "*"

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.doc]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false
