[package]
name = "qst"
version = "0.1.0"
authors = ["Brad Gibson <b2b@humanenginuity.com>"]

[lib]
name = "qst"
path = "src/lib.rs"

[[bin]]
doc = false
name = "qst"
path = "src/main.rs"
test = false

[dependencies]
failure = "0.1.1"

[dependencies.clippy]
optional = true
version = "0.0.195"

[dev-dependencies]
rspec = "1.0.0-beta.4"

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.doc]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false
